--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "jsp-instance-utils"
-version = "1.0.0"
+version = "1.0.1"
 description = "A package containg benchmark instances for the Job Shop Scheduling Problem (JSP) scraped from "
 readme = "README.md"
-authors = [{ name = "Alexander Nasuta", email = "alexander.nasuta@ima.rwth-aachen.de" }]
+authors = [{ name = "Alexander Nasuta", email = "alexander.nasuta@wzl-iqs.rwth-aachen.de" }]
 license = { file = "LICENSE" }
 classifiers = [
     "License :: OSI Approved :: MIT License",
@@ -34,7 +34,7 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/Alexander-Nasuta/pypitemplate"
+Homepage = "https://github.com/Alexander-Nasuta/jsp-instance-utils/"
 
 [tool.pytest.ini_options]
 addopts = "--cov=jsp_instance_utils -p no:warnings"
