--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -6,36 +6,145 @@
 #
 absl-py==2.1.0
     # via ortools
+alabaster==1.0.0
+    # via sphinx
+anyio==4.9.0
+    # via
+    #   httpx
+    #   jupyter-server
+    #   starlette
+    #   watchfiles
+argon2-cffi==23.1.0
+    # via jupyter-server
+argon2-cffi-bindings==21.2.0
+    # via argon2-cffi
+arrow==1.3.0
+    # via isoduration
+asttokens==3.0.0
+    # via stack-data
+async-lru==2.0.5
+    # via jupyterlab
+attrs==25.3.0
+    # via
+    #   jsonschema
+    #   referencing
+babel==2.17.0
+    # via
+    #   jupyterlab-server
+    #   sphinx
 backports-tarfile==1.1.0
     # via jaraco-context
 beautifulsoup4==4.12.3
-    # via jsp-instance-utils (pyproject.toml)
+    # via
+    #   furo
+    #   jsp-instance-utils (pyproject.toml)
+    #   nbconvert
+bleach[css]==6.2.0
+    # via nbconvert
 build==1.2.1
     # via pip-tools
 cachetools==5.3.3
     # via tox
 certifi==2024.2.2
-    # via requests
+    # via
+    #   httpcore
+    #   httpx
+    #   requests
+cffi==1.17.1
+    # via argon2-cffi-bindings
 chardet==5.2.0
     # via tox
 charset-normalizer==3.3.2
     # via requests
 click==8.1.7
-    # via pip-tools
+    # via
+    #   pip-tools
+    #   uvicorn
+cloudpickle==3.1.1
+    # via
+    #   gym
+    #   gymnasium
+codecov==2.1.13
+    # via jssenv
 colorama==0.4.6
-    # via tox
+    # via
+    #   build
+    #   click
+    #   ipython
+    #   pytest
+    #   sphinx
+    #   sphinx-autobuild
+    #   tox
+comm==0.2.2
+    # via ipykernel
+contourpy==1.3.1
+    # via matplotlib
 coverage[toml]==7.4.4
-    # via pytest-cov
+    # via
+    #   codecov
+    #   pytest-cov
+cycler==0.12.1
+    # via matplotlib
+debugpy==1.8.13
+    # via ipykernel
+decorator==5.2.1
+    # via ipython
+defusedxml==0.7.1
+    # via nbconvert
 distlib==0.3.8
     # via virtualenv
 docutils==0.21.1
-    # via readme-renderer
+    # via
+    #   myst-parser
+    #   nbsphinx
+    #   readme-renderer
+    #   sphinx
+executing==2.2.0
+    # via stack-data
+farama-notifications==0.0.4
+    # via gymnasium
+fastjsonschema==2.21.1
+    # via nbformat
 filelock==3.13.4
     # via
     #   tox
     #   virtualenv
+fonttools==4.56.0
+    # via matplotlib
+fqdn==1.5.1
+    # via jsonschema
+furo==2024.8.6
+    # via jsp-instance-utils (pyproject.toml)
+graph-jsp-env==1.0.0
+    # via jsp-instance-utils (pyproject.toml)
+gym==0.26.2
+    # via
+    #   jsp-instance-utils (pyproject.toml)
+    #   jssenv
+gym-notices==0.0.8
+    # via gym
+gymnasium==1.1.1
+    # via
+    #   graph-jsp-env
+    #   jsp-instance-utils (pyproject.toml)
+h11==0.14.0
+    # via
+    #   httpcore
+    #   uvicorn
+httpcore==1.0.7
+    # via httpx
+httpx==0.28.1
+    # via jupyterlab
 idna==3.7
-    # via requests
+    # via
+    #   anyio
+    #   httpx
+    #   jsonschema
+    #   requests
+imageio==2.37.0
+    # via jssenv
+imagesize==1.4.1
+    # via sphinx
 immutabledict==4.2.0
     # via ortools
 importlib-metadata==7.1.0
@@ -44,57 +153,248 @@ importlib-metadata==7.1.0
     #   twine
 iniconfig==2.0.0
     # via pytest
+ipykernel==6.29.5
+    # via jupyterlab
+ipython==9.0.2
+    # via ipykernel
+ipython-pygments-lexers==1.1.1
+    # via ipython
+isoduration==20.11.0
+    # via jsonschema
 jaraco-classes==3.4.0
     # via keyring
 jaraco-context==5.3.0
     # via keyring
 jaraco-functools==4.0.0
     # via keyring
+jedi==0.19.2
+    # via ipython
+jinja2==3.1.6
+    # via
+    #   jupyter-server
+    #   jupyterlab
+    #   jupyterlab-server
+    #   myst-parser
+    #   nbconvert
+    #   nbsphinx
+    #   sphinx
+json5==0.10.0
+    # via jupyterlab-server
+jsonpointer==3.0.0
+    # via jsonschema
+jsonschema[format-nongpl]==4.23.0
+    # via
+    #   jupyter-events
+    #   jupyterlab-server
+    #   nbformat
+jsonschema-specifications==2024.10.1
+    # via jsonschema
+jsp-vis==1.1.0
+    # via jsp-instance-utils (pyproject.toml)
+jssenv==1.0.2
+    # via jsp-instance-utils (pyproject.toml)
+jupyter-client==8.6.3
+    # via
+    #   ipykernel
+    #   jupyter-server
+    #   nbclient
+jupyter-core==5.7.2
+    # via
+    #   ipykernel
+    #   jupyter-client
+    #   jupyter-server
+    #   jupyterlab
+    #   nbclient
+    #   nbconvert
+    #   nbformat
+jupyter-events==0.12.0
+    # via jupyter-server
+jupyter-lsp==2.2.5
+    # via jupyterlab
+jupyter-server==2.15.0
+    # via
+    #   jupyter-lsp
+    #   jupyterlab
+    #   jupyterlab-server
+    #   notebook
+    #   notebook-shim
+jupyter-server-terminals==0.5.3
+    # via jupyter-server
+jupyterlab==4.3.6
+    # via notebook
+jupyterlab-pygments==0.3.0
+    # via nbconvert
+jupyterlab-server==2.27.3
+    # via
+    #   jupyterlab
+    #   notebook
+jupytext==1.16.7
+    # via jsp-instance-utils (pyproject.toml)
+kaleido==0.2.1
+    # via
+    #   graph-jsp-env
+    #   jsp-vis
+    #   jssenv
 keyring==25.1.0
     # via twine
+kiwisolver==1.4.8
+    # via matplotlib
 markdown-it-py==3.0.0
-    # via rich
+    # via
+    #   jupytext
+    #   mdit-py-plugins
+    #   myst-parser
+    #   rich
+markupsafe==3.0.2
+    # via
+    #   jinja2
+    #   nbconvert
+matplotlib==3.8.4
+    # via
+    #   graph-jsp-env
+    #   jsp-vis
+matplotlib-inline==0.1.7
+    # via
+    #   ipykernel
+    #   ipython
+mdit-py-plugins==0.4.2
+    # via
+    #   jupytext
+    #   myst-parser
 mdurl==0.1.2
     # via markdown-it-py
+mistune==3.1.2
+    # via nbconvert
 more-itertools==10.2.0
     # via
     #   jaraco-classes
     #   jaraco-functools
+myst-parser==4.0.1
+    # via jsp-instance-utils (pyproject.toml)
+narwhals==1.31.0
+    # via plotly
+nbclient==0.10.2
+    # via nbconvert
+nbconvert==7.16.6
+    # via
+    #   jupyter-server
+    #   nbsphinx
+nbformat==5.10.4
+    # via
+    #   jupyter-server
+    #   jupytext
+    #   nbclient
+    #   nbconvert
+    #   nbsphinx
+nbsphinx==0.9.7
+    # via jsp-instance-utils (pyproject.toml)
+nest-asyncio==1.6.0
+    # via ipykernel
+networkx==3.4.2
+    # via graph-jsp-env
 nh3==0.2.17
     # via readme-renderer
+notebook==7.3.3
+    # via jsp-instance-utils (pyproject.toml)
+notebook-shim==0.2.4
+    # via
+    #   jupyterlab
+    #   notebook
 numpy==1.26.4
     # via
+    #   contourpy
+    #   graph-jsp-env
+    #   gym
+    #   gymnasium
+    #   imageio
     #   jsp-instance-utils (pyproject.toml)
+    #   jsp-vis
+    #   jssenv
+    #   matplotlib
+    #   opencv-python
     #   ortools
     #   pandas
+opencv-python==4.11.0.86
+    # via
+    #   graph-jsp-env
+    #   jsp-vis
 ortools==9.9.3963
     # via jsp-instance-utils (pyproject.toml)
+overrides==7.7.0
+    # via jupyter-server
 packaging==24.0
     # via
     #   build
+    #   ipykernel
+    #   jupyter-events
+    #   jupyter-server
+    #   jupyterlab
+    #   jupyterlab-server
+    #   jupytext
+    #   matplotlib
+    #   nbconvert
+    #   plotly
     #   pyproject-api
     #   pytest
+    #   sphinx
     #   tox
 pandas==2.2.2
-    # via ortools
+    # via
+    #   graph-jsp-env
+    #   jsp-vis
+    #   jssenv
+    #   ortools
+pandocfilters==1.5.1
+    # via nbconvert
+parso==0.8.4
+    # via jedi
+pillow==11.1.0
+    # via
+    #   imageio
+    #   matplotlib
 pip-tools==7.4.1
     # via jsp-instance-utils (pyproject.toml)
 pkginfo==1.10.0
     # via twine
 platformdirs==4.2.0
     # via
+    #   jupyter-core
     #   tox
     #   virtualenv
+plotly==6.0.1
+    # via
+    #   graph-jsp-env
+    #   jsp-vis
+    #   jssenv
 pluggy==1.4.0
     # via
     #   pytest
     #   tox
+prometheus-client==0.21.1
+    # via jupyter-server
+prompt-toolkit==3.0.50
+    # via ipython
 protobuf==5.26.1
     # via ortools
+psutil==7.0.0
+    # via
+    #   ipykernel
+    #   jssenv
+pure-eval==0.2.3
+    # via stack-data
+pycparser==2.22
+    # via cffi
 pygments==2.17.2
     # via
+    #   furo
+    #   ipython
+    #   ipython-pygments-lexers
+    #   nbconvert
     #   readme-renderer
     #   rich
+    #   sphinx
+pyparsing==3.2.1
+    # via matplotlib
 pyproject-api==1.6.1
     # via tox
 pyproject-hooks==1.0.0
@@ -104,42 +404,186 @@ pyproject-hooks==1.0.0
 pytest==8.1.1
     # via
     #   jsp-instance-utils (pyproject.toml)
+    #   jssenv
     #   pytest-cov
 pytest-cov==5.0.0
     # via jsp-instance-utils (pyproject.toml)
 python-dateutil==2.9.0.post0
-    # via pandas
+    # via
+    #   arrow
+    #   jupyter-client
+    #   matplotlib
+    #   pandas
+python-json-logger==3.3.0
+    # via jupyter-events
 pytz==2024.1
     # via pandas
+pywin32==310
+    # via jupyter-core
+pywin32-ctypes==0.2.3
+    # via keyring
+pywinpty==2.0.15
+    # via
+    #   jupyter-server
+    #   jupyter-server-terminals
+    #   terminado
+pyyaml==6.0.2
+    # via
+    #   jupyter-events
+    #   jupytext
+    #   myst-parser
+pyzmq==26.3.0
+    # via
+    #   ipykernel
+    #   jupyter-client
+    #   jupyter-server
 readme-renderer==43.0
     # via twine
+referencing==0.36.2
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
+    #   jupyter-events
 requests==2.31.0
     # via
+    #   codecov
     #   jsp-instance-utils (pyproject.toml)
+    #   jssenv
+    #   jupyterlab-server
     #   requests-toolbelt
+    #   sphinx
     #   twine
 requests-toolbelt==1.0.0
     # via twine
+rfc3339-validator==0.1.4
+    # via
+    #   jsonschema
+    #   jupyter-events
 rfc3986==2.0.0
     # via twine
+rfc3986-validator==0.1.1
+    # via
+    #   jsonschema
+    #   jupyter-events
 rich==13.7.1
-    # via twine
+    # via
+    #   graph-jsp-env
+    #   twine
+rpds-py==0.23.1
+    # via
+    #   jsonschema
+    #   referencing
+send2trash==1.8.3
+    # via jupyter-server
 six==1.16.0
-    # via python-dateutil
+    # via
+    #   python-dateutil
+    #   rfc3339-validator
+sniffio==1.3.1
+    # via anyio
+snowballstemmer==2.2.0
+    # via sphinx
 soupsieve==2.5
     # via beautifulsoup4
+sphinx==8.1.3
+    # via
+    #   furo
+    #   jsp-instance-utils (pyproject.toml)
+    #   myst-parser
+    #   nbsphinx
+    #   sphinx-autobuild
+    #   sphinx-basic-ng
+    #   sphinx-copybutton
+sphinx-autobuild==2024.10.3
+    # via jsp-instance-utils (pyproject.toml)
+sphinx-basic-ng==1.0.0b2
+    # via furo
+sphinx-copybutton==0.5.2
+    # via jsp-instance-utils (pyproject.toml)
+sphinxcontrib-applehelp==2.0.0
+    # via sphinx
+sphinxcontrib-devhelp==2.0.0
+    # via sphinx
+sphinxcontrib-htmlhelp==2.1.0
+    # via sphinx
+sphinxcontrib-jsmath==1.0.1
+    # via sphinx
+sphinxcontrib-qthelp==2.0.0
+    # via sphinx
+sphinxcontrib-serializinghtml==2.0.0
+    # via sphinx
+stack-data==0.6.3
+    # via ipython
+starlette==0.46.1
+    # via sphinx-autobuild
+terminado==0.18.1
+    # via
+    #   jupyter-server
+    #   jupyter-server-terminals
+tinycss2==1.4.0
+    # via bleach
+tornado==6.4.2
+    # via
+    #   ipykernel
+    #   jupyter-client
+    #   jupyter-server
+    #   jupyterlab
+    #   notebook
+    #   terminado
 tox==4.14.2
     # via jsp-instance-utils (pyproject.toml)
+traitlets==5.14.3
+    # via
+    #   comm
+    #   ipykernel
+    #   ipython
+    #   jupyter-client
+    #   jupyter-core
+    #   jupyter-events
+    #   jupyter-server
+    #   jupyterlab
+    #   matplotlib-inline
+    #   nbclient
+    #   nbconvert
+    #   nbformat
+    #   nbsphinx
 twine==5.0.0
     # via jsp-instance-utils (pyproject.toml)
+types-python-dateutil==2.9.0.20241206
+    # via arrow
+typing-extensions==4.12.2
+    # via
+    #   anyio
+    #   gymnasium
+    #   ipython
+    #   jsp-instance-utils (pyproject.toml)
+    #   referencing
 tzdata==2024.1
     # via pandas
+uri-template==1.3.0
+    # via jsonschema
 urllib3==2.2.1
     # via
     #   requests
     #   twine
+uvicorn==0.34.0
+    # via sphinx-autobuild
 virtualenv==20.25.3
     # via tox
+watchfiles==1.0.4
+    # via sphinx-autobuild
+wcwidth==0.2.13
+    # via prompt-toolkit
+webcolors==24.11.1
+    # via jsonschema
+webencodings==0.5.1
+    # via
+    #   bleach
+    #   tinycss2
+websocket-client==1.8.0
+    # via jupyter-server
+websockets==15.0.1
+    # via sphinx-autobuild
 wheel==0.43.0
     # via pip-tools
 zipp==3.18.1
