--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -117,6 +117,8 @@ furo==2024.8.6
     # via jsp-instance-utils (pyproject.toml)
 graph-jsp-env==1.0.0
     # via jsp-instance-utils (pyproject.toml)
+graph-matrix-jsp-env==0.3.2
+    # via jsp-instance-utils (pyproject.toml)
 gym==0.26.2
     # via
     #   jsp-instance-utils (pyproject.toml)
@@ -126,6 +128,7 @@ gym-notices==0.0.8
 gymnasium==1.1.1
     # via
     #   graph-jsp-env
+    #   graph-matrix-jsp-env
     #   jsp-instance-utils (pyproject.toml)
 h11==0.14.0
     # via
@@ -190,7 +193,9 @@ jsonschema[format-nongpl]==4.23.0
 jsonschema-specifications==2024.10.1
     # via jsonschema
 jsp-vis==1.1.0
-    # via jsp-instance-utils (pyproject.toml)
+    # via
+    #   graph-matrix-jsp-env
+    #   jsp-instance-utils (pyproject.toml)
 jssenv==1.0.2
     # via jsp-instance-utils (pyproject.toml)
 jupyter-client==8.6.3
@@ -252,6 +257,7 @@ markupsafe==3.0.2
 matplotlib==3.8.4
     # via
     #   graph-jsp-env
+    #   graph-matrix-jsp-env
     #   jsp-vis
 matplotlib-inline==0.1.7
     # via
@@ -304,6 +310,7 @@ numpy==1.26.4
     # via
     #   contourpy
     #   graph-jsp-env
+    #   graph-matrix-jsp-env
     #   gym
     #   gymnasium
     #   imageio
@@ -344,6 +351,8 @@ pandas==2.2.2
     #   jsp-vis
     #   jssenv
     #   ortools
+pandoc==2.4
+    # via jsp-instance-utils (pyproject.toml)
 pandocfilters==1.5.1
     # via nbconvert
 parso==0.8.4
@@ -370,6 +379,10 @@ pluggy==1.4.0
     # via
     #   pytest
     #   tox
+plumbum==1.9.0
+    # via pandoc
+ply==3.11
+    # via pandoc
 prometheus-client==0.21.1
     # via jupyter-server
 prompt-toolkit==3.0.50
@@ -419,7 +432,9 @@ python-json-logger==3.3.0
 pytz==2024.1
     # via pandas
 pywin32==310
-    # via jupyter-core
+    # via
+    #   jupyter-core
+    #   plumbum
 pywin32-ctypes==0.2.3
     # via keyring
 pywinpty==2.0.15
@@ -468,6 +483,7 @@ rfc3986-validator==0.1.1
 rich==13.7.1
     # via
     #   graph-jsp-env
+    #   graph-matrix-jsp-env
     #   twine
 rpds-py==0.23.1
     # via
