--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "jsp-instance-utils"
-version = "1.0.2"
-description = "A package containg benchmark instances for the Job Shop Scheduling Problem (JSP) scraped from "
+version = "1.0.3"
+description = "A package containing benchmark instances for the Job Shop Scheduling Problem (JSP) scraped from various sources."
 readme = "README.md"
 authors = [{ name = "Alexander Nasuta", email = "alexander.nasuta@wzl-iqs.rwth-aachen.de" }]
-license = { file = "LICENSE" }
+license = { text = "MIT", expression = "MIT" }
 classifiers = [
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
 ]
@@ -22,7 +21,11 @@ dependencies = [
     "beautifulsoup4",
     "jsp-vis",
 ]
-requires-python = ">=3.10"
+requires-python = ">=3.11"
+
+[tool.setuptools]
+license-files = []
+
 
 [project.optional-dependencies]
 dev = [
